k3s/manifests/media/calibre-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: media
spec:
  selector:
    app: calibre-web
  ports:
    - name: http
      port: 8083
      targetPort: 8083
