k3s/manifests/media/transmission-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.1.242"
spec:
  type: LoadBalancer
  selector:
    app: transmission
  ports:
    - port: 9091
      targetPort: 9091
      name: http
